fixing alignment and footer spacing
made body section centered, took away space below footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,24 @@ body {
   background: url("../img/grey_wash_wall.png");
   text-align: center;
   z-index: -1;
-  height: 1000px;
+  height: 900px;
   width: 1000px;
 }
 
 .footer {
   text-align: center;
   color: black;
-  padding-top: 150px;
+  padding-top: 30px;
+  padding-bottom: -100px;
 }
-
+ 
 .logo {
   margin-left: 50%;
+}
+
+section {
+  align: center;
+  margin-left: 200px;
 }
 
 .subtitle {
